# dxf

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  entities.json
blocks/: Block.cpp  Block.h  Blocks.cpp  Blocks.h  Blocks_test.cpp
docs/: .$Untitled Diagram.drawio.bkp  Untitled Diagram.drawio  classdiagram  convert_so_instructions.md  improve_svghandling.html  missing_entities.md
document/: Block.cpp  Block_test.cpp  Document.cpp  Document.h  Document_test.cpp  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Section.cpp  Section.h
entities/: Arc.cpp  Arc.h  Arc_test.cpp  AttDef_test.cpp  Block.h  Block_test.cpp  Entities.cpp  Entities.h  Entities_test.cpp  Entity.cpp  Entity.h  Entity_test.cpp  Face3d.cpp  Face3d.h  Face3d_test.cpp  Line.cpp  Line.h  Line_test.cpp  MText.cpp  MText.h  MText_test.cpp  Point.cpp  Point.h  Point_test.cpp
entities/types/: Line.cpp  Line.h  Point.cpp  Point.h
entries/: Layer.cpp  Layer.h
file/: File.cpp  File.h  File_test.cpp
googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
header/: Variable.h
include/blocks/: Block.h  Blocks.h
include/document/: Document.h  Entity.h  Section.h
include/entities/: Arc.h  AttDef.h  Attrib.h  Circle.h  Ellipse.h  (+10 more)
samples/: CP2212-0000_Landscape.dxf  D05977-0.dxf  D05977-0.test  Parvi.dxf  bridge.dxf  test-3.dxf  test-3.dxf~  test-4.dxf  test-5.dxf  test-material-1.dxf
src/: main.cpp
tables/: Table.cpp  Table.h  TableEntry.cpp  TableEntry.h  TableEntry_test.cpp  TableFactory.h  Tables.h  Tables_test.cpp
(+51 files in other folders)
